...
        style={[styles.input, { borderColor: colors.borderColor, boxShadow: colors.boxShadow.default, color: colors.textColor }]}
        value={color}
        onChangeText={setColor}
      />
      <Text style={[styles.text, { color: colors.textColor }]}>Preço:</Text>
      <MaskedTextInput
        testID="edit-price"
        type="currency"
        options={{
          prefix: 'R$ ',
          decimalSeparator: ',',
          groupSeparator: '.',
          precision: 2
...
      <Text style={[styles.text, { color: colors.textColor }]}>URL da Imagem:</Text>
      <TextInput
        style={[styles.input, { borderColor: colors.borderColor, boxShadow: colors.boxShadow.default, color: colors.textColor }]}
        value={image}
        onChangeText={setImage}
      />
      <StyledButton testID="att-sneaker" title="Atualizar" onPress={handleUpdate} />
    </ScrollView>
  );
}

const styles = StyleSheet.create({
  container: {
...
