...
          title: "Home",
          headerRight: () => <HeaderRight />,
        }}
      />

      <StyledButton
        testID="create-button"
        style={{ marginBottom: 20, marginTop: -10}}
        title="Criar sneaker"
        onPress={() => router.push("/home/create")}
      />

{loading ? (
...
