appId: com.fare.app
---
- extendedWaitUntil:
    visible:
        id: create-button
    timeout: 7000
- tapOn:
    id: theme-icon
- scrollUntilVisible:
    element:
      id: sneaker-item-bza4CxRmRoTUflxsl5ob
    direction: DOWN
    centerElement: true
- tapOn:
    id: show-details-bza4CxRmRoTUflxsl5ob
- tapOn:
    id: delete-sneaker
- assertVisible:
    text: Você tem certeza?
- tapOn:
    text: Sim